# mcp-center

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  bootstrap.toml  mcp_servers.toml.example
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cargo-clippy.yml  cargo-test.yml
.helm/mcp-center/: Chart.yaml  DEPLOYMENT.md  values-custom.yaml  values-external-postgres.yaml  values.yaml
.helm/mcp-center/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
.helm/mcp-center/templates/tests/: test-connection.yaml
.migration/: 20250822_mcp_servers.sql  20250825_system_settings.sql  20250902_api_keys.sql
config/mc-proxy/: bootstrap.toml
config/mc-register/: bootstrap.toml
docs/: API.md  QUICK_START.md
mc-booter/: Cargo.toml
mc-booter/src/: booter.rs  lib.rs
mc-booter/src/app/: application.rs
mc-common/: Cargo.toml
mc-common/src/: lib.rs  types.rs  utils.rs
mc-common/src/app/: cache.rs  mod.rs
mc-common/src/router/: mod.rs
mc-db/: Cargo.toml
mc-db/src/: apikey.rs  lib.rs  mcp_handler.rs  settings_handler.rs
mc-db/src/model/: apikeys.rs  mcp_servers.rs  mod.rs  system_settings.rs
mc-loader/: Cargo.toml
mc-loader/src/: external_api.rs  lib.rs  local.rs
mc-proxy/: Cargo.toml
mc-proxy/src/: main.rs
mc-proxy/src/service/: config.rs  mod.rs  proxy.rs  router.rs  server.rs
mc-register/: Cargo.toml
mc-register/src/: external_api.rs  lib.rs  main.rs  self_manager.rs
mc-register/src/service/: config.rs  mod.rs  registry.rs  server.rs
mc-registry/: Cargo.toml
mc-registry/src/: lib.rs  mcp_server.rs
mc-registry/src/cache/: mcp_servers.rs
mc-registry/src/event/: mod.rs
mc-service/: Cargo.toml
mc-service/src/: config.rs  main.rs  proxy.rs  router.rs  server.rs
mc-service/src/cache/: mcp_servers.rs  mod.rs
mc-service/src/db/: mcp_handler.rs  mod.rs  settings_handler.rs
mc-service/src/db/model/: mcp_servers.rs  mod.rs  system_settings.rs
mc-service/src/event/: mod.rs
mc-service/src/reverse_proxy/: connection.rs  message.rs  mod.rs
mc-service/src/service/: mcp_server.rs  mod.rs
mc-service/src/session/: manager.rs
mc-token/: Cargo.toml
mc-token/src/: lib.rs  token.rs
src/: booter.rs  bootstrap.toml  main.rs
src/app/: application.rs  config.rs
src/common/: utils.rs
src/envs/: mod.rs
src/service/: config.rs  mod.rs  proxy.rs  router.rs  server.rs
src/service/handle/: external_api.rs  mod.rs  self_manager.rs
src/service/register/: external_api.rs  mod.rs  self_manager.rs
src/service/session/: manager.rs  mod.rs
