[package]
name = "mc-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
async-trait = "0.1.88"
tracing = "0.1.41"
reqwest = "0.12.22"
toml = "0.9.4"