[package]
name = "mc-register"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mc-booter = {path = "../mc-booter"}
mc-common = {path = "../mc-common"}

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.4"
axum = "0.8.4"
