[package]
name = "mc-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mc-db = { path = "../mc-db" }
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-rustls = "0.27.7"
hyper-util = { version = "0.1.16", features = ["client", "client-legacy"] }
axum = "0.8.4"
tracing = "0.1.41"
tokio = { version = "1.46.1", features = ["full", "tracing"] }
tokio-util = "0.7.15"
uuid = { version = "1.18.0", features = ["v4"] }