[package]
name = "mc-token"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mc-db = { path = "../mc-db" }
mc-common = { path = "../mc-common" }

serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
axum = "0.8.4"
tracing = "0.1.41"
tokio = { version = "1.46.1", features = ["full", "tracing"] }
uuid = { version = "1.18.0", features = ["v4"] }
